<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="240dp"
    android:layout_marginTop="-240dp"
    android:id="@+id/share_gal_drop_ll"
    android:visibility="gone"
    android:background="@color/color_white"
    >

  <com.merlin.time.view.TimeTextView
      android:id="@+id/share_gal_create_gal"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="92dp"
      android:layout_weight="1"
      android:drawablePadding="@dimen/d_10"
      android:drawableTop="@drawable/home_ic_add_chuangjian"
      android:gravity="center"
      android:text="@string/create_gallery"
      android:textColor="@color/color_text_color"
      android:textSize="@dimen/s_16"
      />
  <com.merlin.time.view.TimeTextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="92dp"
      android:layout_weight="1"
      android:drawablePadding="@dimen/d_10"
      android:drawableTop="@drawable/home_ic_add_jiaru"
      android:gravity="center"
      android:text="@string/share_gallery_scan"
      android:textColor="@color/color_text_color"
      android:textSize="@dimen/s_16"
      />
  <com.merlin.time.view.TimeTextView
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="92dp"
      android:layout_weight="1"
      android:drawablePadding="@dimen/d_10"
      android:drawableTop="@drawable/home_ic_add_yaoqingma"
      android:gravity="center"
      android:text="@string/share_gallery_ask_in"
      android:textColor="@color/color_text_color"
      android:textSize="@dimen/s_16"
      />
</LinearLayout>