<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fillViewport="true"
    >
  <View
      android:id="@+id/status_bar"
      android:layout_width="match_parent"
      android:layout_height="@dimen/status_bar_height"
      />
  <ImageView
      android:id="@+id/left_back_iv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_below="@+id/status_bar"
      android:src="@drawable/title_left_back_arrow"
      />
  <com.merlin.time.view.TimeTextView
      android:id="@+id/login_top_tv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="@dimen/d_40"
      android:layout_marginTop="@dimen/d_74"
      android:text="@string/login_input_code_num"
      android:textColor="@color/color_text_color"
      android:textSize="@dimen/s_24"
      />

  <com.merlin.time.view.TimeTextView
      android:id="@+id/login_top_tips_tv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/login_top_tv"
      android:layout_marginLeft="@dimen/d_40"
      android:layout_marginTop="@dimen/d_8"
      android:text="@string/login_input_code_tips"
      android:textColor="@color/color_hint_color"
      android:textSize="@dimen/s_14"
      />
  <EditText
      android:id="@+id/login_ed"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/login_top_tv"
      android:layout_marginLeft="@dimen/d_40"
      android:layout_marginRight="@dimen/d_40"
      android:layout_marginTop="@dimen/d_50"
      android:hint="@string/login_input_phone_num_hint"
      android:inputType="phone"
      android:outlineAmbientShadowColor="@color/colorPrimary"
      android:textColor="@color/color_text_color"
      android:textSize="28sp"
      />
  <com.merlin.time.view.TimeTextView
      android:id="@+id/login_code_time_tv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/login_ed"
      android:layout_marginLeft="@dimen/d_40"
      android:layout_marginTop="@dimen/d_8"
      android:text="@string/login_input_code_retry"
      android:textColor="@color/color_blue"
      android:textSize="@dimen/s_16"
      />
  <!--<com.alimuzaffar.lib.pin.PinEntryEditText-->
      <!--android:id="@+id/txt_pin_entry"-->
      <!--android:layout_width="match_parent"-->
      <!--android:layout_height="wrap_content"-->
      <!--android:cursorVisible="false"-->
      <!--android:digits="1234567890"-->
      <!--android:inputType="number"-->
      <!--android:layoutDirection="ltr"-->
      <!--android:maxLength="4"-->
      <!--android:textIsSelectable="true"-->
      <!--android:textSize="20sp"-->
      <!--app:pinAnimationType="fromBottom"-->
      <!--app:pinBackgroundIsSquare="false"-->
      <!--app:pinLineColors="@color/color_cccccc"-->
      <!--app:pinLineStroke="2dp"-->
      <!--app:pinLineStrokeSelected="4dp"-->
      <!--app:pinSingleCharHint="#"-->
      <!--android:layout_alignParentBottom="true"-->
      <!--app:pinTextBottomPadding="@dimen/d_10"-->
      <!--/>-->
</RelativeLayout>