<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical"
    >
  <RelativeLayout
      android:id="@+id/title_rl"
      android:layout_width="match_parent"
      android:layout_height="60dp"
      >
    <ImageView
        android:id="@+id/create_gal_back_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:padding="@dimen/d_20"
        android:src="@drawable/nav_ic_back"
        />

    <com.merlin.time.view.TimeTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/share_gallery_create_gallery"
        android:textColor="@color/black"
        android:textSize="@dimen/s_16"
        />
  </RelativeLayout>

  <com.merlin.time.view.TimeTextView
      android:id="@+id/create_gal_name_tv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/title_rl"
      android:layout_marginStart="@dimen/d_24"
      android:layout_marginTop="@dimen/d_50"
      android:text="@string/share_gallery_gallery_name"
      android:textColor="@color/color_hint_color"
      android:textSize="@dimen/s_16"
      />
  <EditText
      android:id="@+id/create_gal_input"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/create_gal_name_tv"
      android:layout_marginLeft="@dimen/d_24"
      android:layout_marginRight="@dimen/d_24"
      android:outlineAmbientShadowColor="@color/black"
      android:textColor="@color/color_text_color"
      android:textColorHint="@color/color_cccccc"
      android:textSize="24sp"
      />

  <com.merlin.time.view.TimeTextView
      android:id="@+id/create_gal_edit_btn"
      android:layout_width="match_parent"
      android:layout_height="@dimen/d_50"
      android:layout_below="@+id/create_gal_input"
      android:layout_gravity="bottom"
      android:layout_marginEnd="@dimen/d_24"
      android:layout_marginStart="@dimen/d_24"
      android:layout_marginTop="@dimen/d_40"
      android:background="@drawable/commit_btn_bg"
      android:gravity="center"
      android:text="@string/create_gal"
      android:textColor="@color/color_white"
      android:textSize="@dimen/s_16"
      />
</RelativeLayout>